--- a/Rolodoc/View/Base.lproj/Main.storyboard
+++ b/Rolodoc/View/Base.lproj/Main.storyboard
@@ -106,13 +106,16 @@
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b83-rP-T37">
                                             <rect key="frame" x="187.5" y="0.0" width="187.5" height="50"/>
-                                            <color key="backgroundColor" red="0.95294117649999999" green="0.68235294120000001" blue="0.3803921569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" red="0.96470588239999999" green="0.015686274510000001" blue="0.47843137250000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="50" id="A2Z-Om-Y7L"/>
                                             </constraints>
                                             <state key="normal" title=" Send" image="send-icon">
                                                 <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
+                                            <connections>
+                                                <action selector="sendTextPage:" destination="HHU-7v-Uhm" eventType="touchUpInside" id="FlJ-ex-p9v"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                 </stackView>
