--- a/Rolodoc/Controller/ProfileLabelCell.xib
+++ b/Rolodoc/Controller/ProfileLabelCell.xib
@@ -7,35 +7,45 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileLabelCell" customModule="Rolodoc" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileLabelCell" rowHeight="73" id="KGk-i7-Jjw" customClass="ProfileLabelCell" customModule="Rolodoc" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="73"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileLabelCell" rowHeight="120" id="KGk-i7-Jjw" customClass="ProfileLabelCell" customModule="Rolodoc" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="72.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="119.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="Ao0-d0-LzP">
-                        <rect key="frame" x="10" y="10" width="300" height="52.5"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacingType="standard" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ao0-d0-LzP">
+                        <rect key="frame" x="10" y="20" width="300" height="84.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XU9-HO-WdU">
-                                <rect key="frame" x="10" y="0.0" width="290" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XU9-HO-WdU">
+                                <rect key="frame" x="10" y="0.0" width="280" height="32.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="yAd-Sj-r29"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Provider" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oWk-M8-2Xr">
-                                <rect key="frame" x="10" y="21" width="290" height="16.5"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" verticalHuggingPriority="50" verticalCompressionResistancePriority="60" scrollEnabled="NO" contentInsetAdjustmentBehavior="never" editable="NO" text="Provider" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9F7-Ur-GKt">
+                                <rect key="frame" x="10" y="26.5" width="280" height="36"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="bhF-qq-JRw"/>
+                                </constraints>
+                                <edgeInsets key="layoutMargins" top="5" left="5" bottom="5" right="5"/>
+                                <color key="textColor" red="0.66422420739999999" green="0.66424006219999998" blue="0.66423153879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KXp-6j-ea6">
-                                <rect key="frame" x="10" y="38.5" width="290" height="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KXp-6j-ea6">
+                                <rect key="frame" x="10" y="55.5" width="280" height="29"/>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="12"/>
                                 <color key="textColor" red="0.66422420739999999" green="0.66424006219999998" blue="0.66423153879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -44,26 +54,24 @@
                         <constraints>
                             <constraint firstItem="KXp-6j-ea6" firstAttribute="leading" secondItem="Ao0-d0-LzP" secondAttribute="leading" constant="10" id="VRb-TF-Vjm"/>
                             <constraint firstItem="XU9-HO-WdU" firstAttribute="leading" secondItem="Ao0-d0-LzP" secondAttribute="leading" constant="10" id="jw8-W6-HtP"/>
-                            <constraint firstItem="oWk-M8-2Xr" firstAttribute="leading" secondItem="Ao0-d0-LzP" secondAttribute="leading" constant="10" id="qK8-AU-HXh"/>
+                            <constraint firstItem="9F7-Ur-GKt" firstAttribute="leading" secondItem="Ao0-d0-LzP" secondAttribute="leading" constant="10" id="lJd-fw-mTP"/>
                         </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="Ao0-d0-LzP" secondAttribute="bottom" constant="10" id="282-55-gf4"/>
-                    <constraint firstItem="Ao0-d0-LzP" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="5rB-sa-j7T"/>
-                    <constraint firstItem="Ao0-d0-LzP" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="EiD-2N-SJz"/>
-                    <constraint firstItem="Ao0-d0-LzP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Lri-9i-7mK"/>
+                    <constraint firstAttribute="bottom" secondItem="Ao0-d0-LzP" secondAttribute="bottom" constant="15" id="282-55-gf4"/>
+                    <constraint firstItem="Ao0-d0-LzP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="Lri-9i-7mK"/>
                     <constraint firstItem="Ao0-d0-LzP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="eG1-QM-yYG"/>
                     <constraint firstAttribute="trailing" secondItem="Ao0-d0-LzP" secondAttribute="trailing" constant="10" id="gGo-iJ-thR"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="providerLabel" destination="oWk-M8-2Xr" id="HHb-1E-mcj"/>
+                <outlet property="providerLabel" destination="9F7-Ur-GKt" id="1wW-eZ-T1D"/>
                 <outlet property="titleLabel" destination="XU9-HO-WdU" id="0Nr-3a-yXb"/>
                 <outlet property="updatedAtLabel" destination="KXp-6j-ea6" id="zJK-NK-jVv"/>
             </connections>
-            <point key="canvasLocation" x="129" y="95.5"/>
+            <point key="canvasLocation" x="129" y="119"/>
         </tableViewCell>
     </objects>
 </document>
